add data-elems for elements

--- a/src/module/domain/pages/Vacancies/components/SearchButton/SearchButton.module.scss
+++ b/src/module/domain/pages/Vacancies/components/SearchButton/SearchButton.module.scss
@@ -3,11 +3,8 @@
 .SearchButton {
   width: 100%;
 
-  button:hover {
-    cursor: pointer;
-  }
 
-  input {
+  button {
     text-align: center;
     height: 32px;
     width: 83px;
